diployment-strategy/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:  
  name: a-b-testing-latency-simulator-deployment   
spec:  
  ports:
  - nodePort: 30190
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    pod: a-b-testing-latency-simulator-pod
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 127.0.0.1
