diployment-strategy/gateway-latency.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: stragety-gateway 
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "127.0.0.1"

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: stragety-gateway-02 
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
