diployment-strategy/manifest.yaml

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: latency-simulator-vs-2  
  labels:
    app.bancolombia.com.co/env: dev
    app.bancolombia.com.co/cost-center: c102000040
    app.bancolombia.com.co/application-code: nu0051001
    app.bancolombia.com.co/project: digital-distribution
    app.bancolombia.com.co/pmo: pmo31608
spec:
  hosts:
    - 127.0.0.1
  gateways:
    - stragety-gateway-02 
  http:
    - match:
      - uri:
          prefix: /galatea/a-b-testing/
      rewrite:
        uri: /
      route:
        - destination:
            host: a-b-testing-latency-simulator
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: a-b-testing-latency-simulator
spec:
  selector:
    app: a-b-testing-latency-simulator
    pod: a-b-testing-latency-simulator-pod
  ports:
    - name: container-port
      targetPort: 80
      port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: a-b-testing-latency-simulator-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: a-b-testing-latency-simulator-pod
  template:
    metadata:
      labels:
        app: a-b-testing-latency-simulator
        pod: a-b-testing-latency-simulator-pod
    spec:
      containers:
        - name: a-b-testing-latency-simulator-container
          image: cristian159/latency-simulator
          resources:
            requests:
              memory: 200Mi
              cpu: 200m
            limits:
              memory: 200Mi
              cpu: 200m
          ports:
            - containerPort: 80
